<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="Pot ID"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText11"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="Room ID"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText12"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/enter_ArduinoID"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/enter_RPiID"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText11" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="Temperature"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText6"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/thresholdValue"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/editText12" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="60dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="less"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText6"
        app:layout_constraintEnd_toStartOf="@+id/checkBox2"
        app:layout_constraintStart_toEndOf="@+id/editText6" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="83dp"
        android:layout_height="37dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="greater"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="Light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText14" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="Soil Moisture"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText13" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="Humidity"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <EditText
        android:id="@+id/editText14"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:hint="@string/thresholdValue"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView23"
        app:layout_constraintStart_toEndOf="@+id/textView23" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/thresholdValue"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView24"
        app:layout_constraintEnd_toStartOf="@+id/checkBox3"
        app:layout_constraintStart_toEndOf="@+id/textView24" />

    <EditText
        android:id="@+id/editText13"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:hint="@string/thresholdValue"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView22"
        app:layout_constraintStart_toEndOf="@+id/textView22" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="60dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="less"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText14"
        app:layout_constraintEnd_toStartOf="@+id/checkBox8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editText14" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="60dp"
        android:layout_height="33dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="less"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText10"
        app:layout_constraintEnd_toStartOf="@+id/checkBox4" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="83dp"
        android:layout_height="37dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="greater"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkBox5"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="83dp"
        android:layout_height="37dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="greater"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkBox3"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="83dp"
        android:layout_height="37dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="greater"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkBox6"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="less"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText13"
        app:layout_constraintEnd_toStartOf="@+id/checkBox7"
        app:layout_constraintStart_toEndOf="@+id/editText13" />

    <Button
        android:id="@+id/button13"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="Set Thresholds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText10" />

</androidx.constraintlayout.widget.ConstraintLayout>